--- a/css/custom.css
+++ b/css/custom.css
@@ -21,19 +21,6 @@ header h1 {
     color: #f8f9fa;
 }
 
-#main-container {
-    width: 100%;
-    padding-left: 20px;
-    padding-right: 20px;
-    padding-top: 2rem;
-    padding-bottom: 2rem;
-    margin-top: 2rem;
-    margin-left: auto;
-    margin-right: auto;
-    background-color: #e9ecef;
-    border-radius: 0.375rem;
-}
-
 #about {
     font-size: 1.4em;
     padding-top: 2rem;
@@ -43,6 +30,19 @@ header h1 {
     width: 320px;
     background-color: #cfe2ff;
     padding: 0.9rem 1.5rem 1rem 1.5rem;
+    border-radius: 0.375rem;
+}
+
+#main-container {
+    width: 100%;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 1.2rem;
+    padding-bottom: 2rem;
+    margin-top: 2rem;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: #e9ecef;
     border-radius: 0.375rem;
 }
 
@@ -58,14 +58,15 @@ header h1 {
 #projects .filters > div,
 #projects .filters > select,
 #projects .filters > input {
+    margin-top: 0.8rem;
     flex-grow: 1;
-    max-height: 2.7rem;
     max-width: 100%;
 }
 
 #projects .filters #search,
 #projects .filters select,
 #projects .filters #skills .ts-control {
+    min-height: 2.7rem;
     border: 1px solid #ced4da;
 }
 
